# zfs

./: META  configure.ac
cmd/zfs/: zfs_iter.c
config/: user.m4
include/: libzfs_core.h  zfs_prop.h
include/sys/: dmu.h  dmu_objset.h  dsl_dataset.h  dsl_dir.h  dsl_prop.h
include/sys/fs/: zfs.h
lib/: Makefile.am
lib/libzfs/: libzfs_dataset.c  libzfs_iter.c  libzfs_sendrecv.c  libzfs_util.c
lib/libzfs_core/: libzfs_core.c
lib/libzfs_core-legacy/: Makefile.am  libzfs_core.c
man/man3/: Makefile.am  libzfs_core.h.3  lzc_bookmark.3  lzc_clone.3  lzc_create.3  lzc_destroy_one.3  lzc_get_bookmarks.3  lzc_get_holds.3  lzc_hold.3  lzc_inherit.3  lzc_list.3  lzc_promote.3  lzc_receive.3  lzc_rollback.3  lzc_send.3  lzc_send_progress.3  lzc_send_space.3  lzc_set_props.3  lzc_snaprange_space.3  lzc_snapshot.3
module/zcommon/: zfs_prop.c  zpool_prop.c  zprop_common.c
module/zfs/: dmu_objset.c  dmu_send.c  dsl_dataset.c  dsl_destroy.c  dsl_dir.c  dsl_prop.c  sa.c  zfs_ctldir.c  zfs_ioctl.c  zvol.c
rpm/generic/: zfs.spec.in
